maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:11: error: not found: value j
  return Array(j, i);
               ^ShortestPathMaze:11: error: not found: value i
  return Array(j, i);
                  ^